# vanilla-installer

./: .gitignore  README.md  VERSION  abroot-adapter  demo.json  meson.build  oci-post-install  recipe.json  vanilla-installer.txt
.github/workflows/: main.yml
data/: installer.desktop  installer.json  installer.session  installer.session.conf  meson.build  org.vanillaos.Installer.appdata.xml.in  org.vanillaos.Installer.desktop.in  org.vanillaos.Installer.gschema.xml  org.vanillaos.Installer.policy
data/icons/: meson.build
debian/: changelog  control  copyright  files  vanilla-installer.install
po/: LINGUAS  POTFILES  af.po  am.po  an.po  ar.po  ar_MA.po  arn.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es-ES.po  es.po  et.po  eu.po  fa.po  (+104 more)
vanilla_installer/: dialog.py  main.py  meson.build  style.css  vanilla-installer-processor.in  vanilla-installer.gresource.xml  vanilla-installer.in  window.py
vanilla_installer/assets/: CREDITS
vanilla_installer/core/: disks.py  keymaps.py  languages.py  locale.py  meson.build  system.py  timezones.py
vanilla_installer/core/locales/: __init__.py  africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  meson.build  mexico.py  pacific.py
vanilla_installer/defaults/: conn_check.py  disk.py  disks.py  encryption.py  image.py  keyboard.py  language.py  meson.build  network.py  nvidia.py  partitioning.py  theme.py  timezone.py  users.py  vm.py  welcome.py
vanilla_installer/defaults/disks/: disk_default_page.py  disk_manual_page.py  disk_widgets.py  meson.build
vanilla_installer/gtk/: confirm.blp  confirm.ui  default-conn-check.ui  default-disk.blp  default-disk.ui  default-encryption.blp  default-encryption.ui  default-image.ui  default-keyboard.blp  default-keyboard.ui  default-language.blp  default-language.ui  default-network.ui  default-nvidia.blp  default-nvidia.ui  default-partitioning.ui  default-theme.blp  default-theme.ui  default-timezone.blp  default-timezone.ui  default-users.blp  default-users.ui  default-vm.ui  default-welcome.blp  default-welcome.ui  default.vm.ui  dialog-confirm.ui  dialog-disk-confirm.blp  dialog-disk-confirm.ui  dialog-disk.blp  dialog-disk.ui  dialog-output.blp  dialog-output.ui  dialog-poweroff.ui  dialog-recovery.blp  dialog-recovery.ui  dialog.blp  dialog.ui  done.blp  done.ui  (+28 more)
vanilla_installer/gtk/disks/: default-page.ui  dialog-disk-confirm.ui  manual-page.ui  widget-disk.ui
vanilla_installer/layouts/: meson.build  preferences.py  yes_no.py
vanilla_installer/models/: disks.py  keymaps.py  meson.build  timezones.py
vanilla_installer/models/locales/: __init__.py  africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  mexico.py  pacific.py
vanilla_installer/utils/: builder.py  meson.build  parser.py  processor.py  recipe.py  run_async.py
vanilla_installer/views/: confirm.py  done.py  meson.build  progress.py  tour.py
vanilla_installer/windows/: dialog.py  dialog_confirm.py  dialog_output.py  dialog_poweroff.py  dialog_recovery.py  main_window.py  meson.build  window_cpu.py  window_ram.py  window_underpowered.py  window_unsupported.py
